--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "dependencies": {},
     "devDependencies": {
       "expect.js": "0.3.1",
-      "seajs": "2.2.1"
+      "seajs": "2.2.1",
+      "expect": "0.3.1"
     },
     "engines": {
       "seajs": "2.2.1"
